# gymcpp

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  SCsub  register_types.cpp  register_types.h
.devcontainer/: Dockerfile  README.md  devcontainer.json  post-create.sh
include/gym/: client.h  gym.h  server.h
include/gym/godot/: gdserver.h
lib/: CMakeLists.txt
lib/zmqcpp/: CMakeLists.txt
scripts/: protoc.sh
src/: CMakeLists.txt  README.md  register_types.cpp
src/client/: CMakeLists.txt  client.cpp
src/godot/: gdserver.cpp  summator.cpp
src/server/: CMakeLists.txt  server.cpp
test/: CMakeLists.txt  CMakeLists.txt.in  README.md  client_test.cpp  server_test.cpp
